  * schroot now ignores backup files (including dpkg conffile backups)
    in /etc/schroot/chroot.d (Closes: #513307, #496629).

  [Jan-Marek Glogowski]
  * debian/control:
    - Build-Depends: Add doxygen and graphviz.
    - schroot-dbg: Add new package containing debugging symbols
      for schroot, dchroot and dchroot-dsa.
    - schroot-doc: Don't depend on pkg-config, suggest libsbuild-dev.

 -- Roger Leigh <rleigh@debian.org>  Sat, 28 Mar 2009 10:55:46 +0000

schroot (1.2.1-1) unstable; urgency=low

  * New upstream stable release.
  * debian/control:
    - Upgrade to Standards-Version 3.8.0.
    - Don't Build-Depend upon -1 Debian revisions.
  * po:
    - Update eu translation (Closes: #479498).  Thanks to Piarres Beobide.
    - Update fr translation (Closes: #481648).  Thanks to Nicolas François.
    - Update pt translation (Closes: #480640).  Thanks to Pedro Ribeiro.
    - Update vi translation (Closes: #479750).  Thanks to Clytie Siddall.
    - Add zh_CN translation (Closes: #480174).  Thanks to LI Daobing (李道兵).
    - Update zh_CN translation.  Thanks to Ji ZhengYu.
  * sbuild/sbuild-lock.cc: Order of "struct flock" members is not assumed,
    for GNU/kFreeBSD portability (Closes: #485637).  Thanks to Petr
    Salinger.
  * schroot.1.in, schroot.conf.5.in: Document /etc/schroot/chroot.d
    (Closes: #487588).
  * setup/10mount: Don't clear mount options for LVM snapshots
    (Closes: #488726).
  * New "loopback" chroot type allows loopback mounting of files
    (Closes: #475515).

 -- Roger Leigh <rleigh@debian.org>  Sat, 05 Jul 2008 11:41:33 +0100

schroot (1.2.0-1) unstable; urgency=low

  * New upstream stable release.
  * Add eu translation (Closes: #462164).
  * Updated pt translation (Closes: #464053).
  * debian/control:
    - libsbuild-dev is in section libdevel.
    - Add libboost-filesystem-dev to Build-Depends.
    - Bump Standards-Version to 3.7.3.
  * debian/libsbuild-doc.doc-base: Use section Programming/C++